[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ScrollLevel.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Stage.gd" type="Script" id=3]
[ext_resource path="res://fonts/alterebro-pixel-font.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ressources/Button.tres" type="StyleBox" id=5]
[ext_resource path="res://sounds/lose.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 91.4102, 10 )

[sub_resource type="Animation" id=2]
resource_name = "lose_animation"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1.1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -160 ), Vector2( 0, -160 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_animation_end"
} ]
}

[sub_resource type="DynamicFont" id=3]
size = 36
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 26
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Stage" type="Node2D"]
script = ExtResource( 3 )

[node name="ScrollLevel" parent="." instance=ExtResource( 2 )]

[node name="Node2D" type="Node2D" parent="."]

[node name="Player" parent="Node2D" instance=ExtResource( 1 )]
position = Vector2( 95.4619, 168.452 )

[node name="CheckPlayer" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPlayer"]
position = Vector2( 90.4228, 310.483 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/lose_animation = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pontos" type="Label" parent="CanvasLayer"]
margin_left = 41.1225
margin_top = -4.0
margin_right = 178.122
margin_bottom = 26.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="CanvasLayer"]
margin_left = 62.0
margin_top = 147.0
margin_right = 118.0
margin_bottom = 173.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 4 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Last" type="Label" parent="CanvasLayer"]
margin_top = 230.0
margin_right = 180.0
margin_bottom = 247.0
custom_fonts/font = SubResource( 5 )
text = "Ultima pontuacao: 10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Best" type="Label" parent="CanvasLayer"]
margin_top = 248.0
margin_right = 180.0
margin_bottom = 265.0
custom_fonts/font = SubResource( 5 )
text = "Melhor pontuacao: 10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="body_exited" from="CheckPlayer" to="." method="_on_CheckPlayer_body_exited"]
[connection signal="button_down" from="CanvasLayer/Play" to="." method="_on_Play_button_down"]
